# fsd3d

./: .gitignore  LICENSE  README.md  pyproject.toml
asset/: crazyflie_drone.fbx
examples/fsd3d-3dgs/: pyproject.toml
examples/fsd3d-3dgs/src/fsd3d_3dgs/: __init__.py
examples/fsd3d-3dgs/src/fsd3d_3dgs/planner/: __init__.py  astar.py  voxel_map.py
examples/fsd3d-3dgs/src/fsd3d_3dgs/plugin/: __init__.py  three_dgs.py
examples/fsd3d-3dgs/src/fsd3d_3dgs/scene/: __init__.py  loader.py  renderer.py
examples/fsd3d-3dgs/src/fsd3d_3dgs/telemetry/: __init__.py  faker.py
examples/fsd3d-3dgs/tests/: test_integration.py
src/fsd3d/: __init__.py  constants.py
src/fsd3d/conditioner/: __init__.py  conditioner.py  normalizer.py  path_encoder.py  telemetry_encoder.py
src/fsd3d/data_bridge/: __init__.py  context_normalizer.py  visual_adapter.py
src/fsd3d/decoder/: README.md  __init__.py  action_head.py  action_projection.py  autoregressive.py  context.py  generate_diagram.py  main.py  transformer.py  visualize.py  visualize_training.py
src/fsd3d/decoder/tests/: conftest.py  test_autoregressive.py  test_cfm.py  test_dataset.py  test_model.py
src/fsd3d/encoder/: README.md  __init__.py  domain_adapter.py  vit_encoder.py
src/fsd3d/inference/: __init__.py  autoregressive.py  cfm.py
src/fsd3d/plugin/: __init__.py  base.py  mock.py
src/fsd3d/training/: __init__.py  autoregressive.py  cfm.py
src/fsd3d/visualization/: __init__.py  cfm_diffusion.py  comparison.py  diagram.py  training_progression.py
