[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsd3d"
version = "0.1.0"
description = "FSD3D Transformer Decoder — CFM vs Autoregressive comparison framework"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["src/fsd3d/decoder/tests"]
addopts = "-p no:launch_testing -p no:launch_ros"
