[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fsd3d-3dgs"
version = "0.1.0"
description = "FSD3D 3DGS flight example — gsplat rendering, A* planning, telemetry simulation"
requires-python = ">=3.10"
dependencies = [
    "fsd3d",
    "gsplat",
    "plyfile",
    "scipy",
    "opencv-python",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
where = ["src"]
